template/styles/styles.css
/* reset */
*  {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

/* document */
body {
    counter-reset: title;
	font-size: 1rem;
	font-family: "URW Gothic L", "Helvetica", "Arial", sans-serif;
    padding: 7%;
}

p {
    display: block;
    white-space: pre-line;
}

header > .background {
    position: inherit;
    background-color: #0261a1;
    height: 6rem;
    width: 100%;
}

header > div > h1 {
    font-size: 400%;
    position: absolute;
    color: white;
    font-weight: 900;
    display: inline-block;
    vertical-align: middle;
}

header > div > img {
    padding-left: .5rem;
    padding-right: .2rem;
    padding-top: .6rem;
    vertical-align: middle;
}

/* images */

#ts-animation {
    width: 100%;
    padding-left: calc(50% - 36em);
    max-width: 72em;
    height: auto;
}

#marchant-calculator {
    float: left;
    margin: 1em;
    max-width: 12.5rem;
}

#marchant-calculator > img {
    max-width: 12rem;
}

figcaption {
    text-align: start;
    font-size: 80%;
    color: dimgray;
    word-wrap: break-word;
}

/* Add flags in front of list items which have an hreflang attribute */
a[hreflang]::before {
    display: inline-block;
    width: 1rem;
    height: .8rem;
    margin-right: .2rem;
    content: "";
}

a[hreflang=en]::before {
    background-image: url("../../media/flag-en.svg");
    background-size: 100%;
}
a[hreflang=it]::before {
    background-image: url("../../media/flag-it.svg");
    background-size: 100%;
}
a[hreflang=fr]::before {
    background-image: url("../../media/flag-fr.svg");
    background-size: 100%;
}

small > a > img {
    vertical-align: middle;
}

footer {
    color: white;
    padding: .1em;
    margin-top: 1rem;
    background: #0261a1;
}

footer address a {
    font-style: normal;
}

footer a {
    color: white;
}

section figure video {
    padding-top: 1em;
    padding-bottom: 1em;
}

.footer {
    display: flex;
    padding: .1em;
    color: black;
    font-style: italic;
    background: transparent;
    border: .1em dotted black;
}

.footer time {
    margin-left: auto;
}

/* text */
h2 {
    font-size: xx-large;
}

h3 {
    font-size: x-large;
    border-bottom: .1em solid black;
    margin-top: 1em;
    margin-bottom: .5em;
}

h3:before{
    content: counter(title);
    padding-right: .5em;
    counter-increment: title;
}

h4 {
    font-weight: bold;
    white-space: pre-line;
}


/* lists */
body > .navigation {
    position: inherit;
    margin-top: 1em;
    margin-bottom: 1em;
	width: 100%;
}

ol > li {
    margin-left: 2em;
}

/* Add border and background color to navigation */
.navigation > nav {
	padding: 0.5em;
    margin-top: 1em;
	background-color: #e6e6e6;
    border-style: solid;
    border-width: .1rem;
    border-color: #0261a1;
}

/* Remove bulletpoints from list entries */
.navigation > nav > ul {
    list-style-type: none;
}

.navigation > nav > ul > li > a:hover {
    text-decoration: none;
}

/* Add padding to nested list items */
.navigation > nav > ul ~ ul > li ~ li {
    padding-left: 1rem;
}

dl {
    padding-top: 0em;
    padding-bottom: 1em;
}

dt {
    font-weight: bold;
    color: #166da8;
}

dd {
    padding-left: 1em;
}

dd:before {
    content: "⌖";
}

/* table */
table {
    border-collapse: collapse;
    width: 100%;
}

tr:nth-child(even) {
    background-color: #dbe6ef;
}

th {
    color: white;
    background: #0261a1;
    padding: .8em;
    border-top: .2em solid black;
    border-bottom: .2em solid black;
}

tr {
    height: 2em;
    border-bottom: .05em solid #bdd0e4;
}

tr > td {
    font-weight: bold;
    padding-left: .5em;
    text-align: left;
}


tr > td ~ td {
    text-align: center;
}

/* forms */

button {
    background-color: #0261a1;
    display: inline-block;
    padding-left: .6rem;
    padding-right: .6rem;
    padding-top: .2rem;
    padding-bottom: .2rem;
    color: white;
    border: .1rem transparent;
    box-shadow: 0 0 .1rem .1rem rgba(0, 0, 0, 0.15), 0 0 .2rem .2rem rgba(0, 0, 0, 0.1);
    border-radius: .2rem;
}

button:hover {
     color: lightgray;
 }

button:active {
    color: lightgray;
    box-shadow: inset 0 0 0 .3em rgba(0, 0, 0, .1), inset 0 0 0 .5em rgba(0, 0, 0, .2);
}

#search::before {
    background-image: url("../../media/icon-search.svg");
    background-repeat: no-repeat;
    margin-right: .3rem;
    background-size: 100%;
    width: 1rem;
    height: 1rem;
    content: "";
}

#font-size-form {
	float: right;
}

#font-size-form > label, #font-size-form > input, #font-size-form > output {
	display: inline-block;
	vertical-align: middle;
	padding: 0; margin: 0;
}

#calc-demo-embed {
    width: 100%;
    max-width: 800px;
}

#calc-demo-embed > iframe {
    min-width: 600px;
    width: 95%;
    height: calc(40em * 1.25);
}

#calc-usage {
    position: relative;
    height: 0;
    padding-bottom: 56.25%;
    max-width: 1920px;
}

#calc-usage-embed {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
}

#calc-usage > figcaption {
    padding-top: calc(56.25% + .5em);
    margin-bottom: 10em;
    position: inherit;
}

#calc-usage ~ .footer {
    margin-top: 4em;
}

#youtube {
    position: relative;
    height: 0;
    padding-bottom: 56.25%;
    max-width: 1920px;
    
}

#youtube-embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

